--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Focus Hacker",
   "icons": [
     {
-      "src": "./static/favicons/favicon-16x16.png",
+      "src": "./public/myfavicon.ico",
       "sizes": "16x16",
       "type": "image/x-icon"
     }
